// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly when fullWidth & required props are falsy 1`] = `
<div>
  <div
    class="sc-bdfBwQ fLOOjT"
  >
    <input
      class="sc-gsTCUz jElvau"
      id="input"
      placeholder="Enter Email Address"
      type="email"
    />
  </div>
</div>
`;

exports[`Input should render correctly when it is disabled 1`] = `
<div>
  <div
    class="sc-bdfBwQ fLOOjT"
  >
    <input
      class="sc-gsTCUz hgGslb"
      disabled=""
      id="email-input"
      placeholder="Enter Email Address"
      type="text"
    />
  </div>
</div>
`;

exports[`Input should render correctly with all the props given 1`] = `
<div>
  <div
    class="sc-bdfBwQ jrNqOv"
  >
    <span
      class="sc-dlfnbm gFsDaS"
    >
      www.
    </span>
    <input
      class="sc-gsTCUz jElvau"
      id="email-input"
      placeholder="Enter Email Address"
      required=""
      type="email"
    />
    <span
      class="sc-hKgILt kAVLpk"
    >
      .com
    </span>
  </div>
</div>
`;
